e2e/test/lb-fw-update-acl/update-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-test
  annotations:
    service.beta.kubernetes.io/linode-loadbalancer-firewall-acl: |
      {
        "denyList": {
            "ipv4": ["8.8.8.8/32",
                    "9.9.9.9/32"]
        }
      }
  labels:
    app: lb-fw-update-acl
spec:
  type: LoadBalancer
  selector:
    app: lb-fw-update-acl
  ports:
    - name: http-1
      protocol: TCP
      port: 80
      targetPort: 8080
  sessionAffinity: None
