e2e/test/lb-fw-update-acl/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: lb-fw-update-acl
  labels:
    all:
    lke:
spec:
  namespace: "lb-fw-update-acl"
  catch:
    - script:
        shell: bash
        shellArgs:
          - -c
        content: |
          set -euo pipefail
          echo "Test failed. Fetching CCM logs..."
          kubectl logs -n kube-system daemonsets/ccm-linode | grep "lb-fw-update-acl" | tail -100
  steps:
    - name: Create pods and services
      try:
        - apply:
            file: create-pods-services.yaml
      catch:
        - describe:
            apiVersion: v1
            kind: Pod
        - describe:
            apiVersion: v1
            kind: Service
    - name: Check that loadbalancer ip is assigned
      try:
      - assert:
          resource:
            apiVersion: v1
            kind: Service
            metadata:
              name: svc-test
            status:
              (loadBalancer.ingress[0].ip != null): true
    - name: Fetch Nodebalancer ID, make sure it has firewall attached
      try:
        - script:
            shell: bash
            shellArgs:
              - -c
            content: |
              set -euo pipefail

              for i in {1..10}; do
                  nbid=$(KUBECONFIG=$KUBECONFIG NAMESPACE=$NAMESPACE LINODE_TOKEN=$LINODE_TOKEN ../scripts/get-nb-id.sh)

                  fw=$(curl -s --request GET \
                    -H "Authorization: Bearer $LINODE_TOKEN" \
                    -H "Content-Type: application/json" --fail-early --retry 3 \
                    -H "accept: application/json" \
                    "$LINODE_URL/v4/nodebalancers/${nbid}/firewalls" || true)
                  
                  fwCount=$(echo $fw | jq '.data | length')
                  ips=$(echo $fw | jq '.data[].rules.inbound[].addresses.ipv4[]')
                  if [[ $fwCount -eq 1 && -n $ips && $ips == *"7.7.7.7/32"* ]]; then
                      echo "firewall attached and rule has specified ip"
                      break
                  fi
                  sleep 10
              done
            check:
                ($error == null): true
                (contains($stdout, 'firewall attached and rule has specified ip')): true
    - name: Update service with new ACL
      try:
        - apply:
            file: update-service.yaml
      catch:
        - describe:
            apiVersion: v1
            kind: Service
    - name: Fetch firewall ID and check rules are updated
      try:
        - script:
            shell: bash
            shellArgs:
              - -c
            content: |
              set -euo pipefail

              for i in {1..10}; do
                  nbid=$(KUBECONFIG=$KUBECONFIG NAMESPACE=$NAMESPACE LINODE_TOKEN=$LINODE_TOKEN ../scripts/get-nb-id.sh)

                  fw=$(curl -s --request GET \
                    -H "Authorization: Bearer $LINODE_TOKEN" \
                    -H "Content-Type: application/json" --fail-early --retry 3 \
                    -H "accept: application/json" \
                    "$LINODE_URL/v4/nodebalancers/${nbid}/firewalls" || true)
                  
                  fwCount=$(echo $fw | jq -r '.data | length')
                  ips=$(echo $fw | jq -r '.data[].rules.inbound[].addresses.ipv4[]')
                  if [[ $fwCount -eq 1 && -n $ips && ! $ips == *"7.7.7.7/32"* ]]; then
                      echo "firewall attached and rule updated"
                      break
                  fi
                  sleep 10
              done
            check:
                ($error == null): true
                (contains($stdout, 'firewall attached and rule updated')): true
